# Floorplan-Optimizer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  optOptionsDialog.cpp  optOptionsDialog.ui  ralineedit.cpp  ralineedit.h  ratextedit.cpp  ratextedit.h  renderarea.cpp  renderarea.h  requirementsTree.cpp  requirementsTree.h  resultDialog.cpp  resultDialog.h  resultDialog.ui  typeTreeItem.cpp  typeTreeItem.h  typetreewidget.cpp  typetreewidget.h  variantTreeItem.cpp  variantTreeItem.h
Algorithm/: AlgorithmManager.cpp  AlgorithmManager.h  GraphNode.h  PlacementGraph.cpp  RectanglePlacer.cpp  Type.cpp  Type.h  Variant.cpp  Variant.h  VariantRectangle.h  resultStruct.h
UI/: requirementsTree.cpp  requirementsTree.h
UI/RenderArea/: ralineedit.cpp  ralineedit.h  renderarea.cpp  renderarea.h
UI/TypesTree/: typeTreeItem.cpp  typeTreeItem.h  typetreewidget.cpp  typetreewidget.h  variantTreeItem.cpp  variantTreeItem.h
UI/Visualizer/: configurationPlane.cpp  configurationPlane.h
UI/Windows/: mainwindow.cpp  mainwindow.ui  optOptionsDialog.cpp  optOptionsDialog.h  optOptionsDialog.ui  resultDialog.cpp  resultDialog.h  resultDialog.ui
XML_Management/: XMLFileManager.cpp  XMLFileManager.h
